--- a/circle.yml
+++ b/circle.yml
@@ -36,7 +36,7 @@ deployment:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
       - docker push $DOCKER_IMAGE_NAME:latest
   hub_tag:
-    tag: /^v[0-9]+(\.[0-9]+){2}(-.+|[^-.]*)$/
+    tag: /v[0-9]+(\.[0-9]+)*/
     owner: jimmidyson
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
