--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,10 @@ jobs:
       - run:
           name: Update dependencies
           command: |
-            command -v dep >/dev/null 2>&1 || go get github.com/golang/dep/cmd/dep
-            dep ensure -v -vendor-only
+            if [ ! -d "vendor" ]; then
+              command -v dep >/dev/null 2>&1 || go get github.com/golang/dep/cmd/dep
+              dep ensure -v -vendor-only
+            fi
 
       - save_cache:
           key: vendor-{{ checksum "Gopkg.lock" }}
