--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -11,4 +11,4 @@
 [[override]]
   name = "gopkg.in/fsnotify.v1"
   version = "1.2.9"
-  source = "git@github.com:fsnotify/fsnotify"
+  source = "https://github.com/fsnotify/fsnotify.git"
