--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,6 +1,7 @@
 [[constraint]]
   name = "gopkg.in/fsnotify.v1"
   version = "1.4.7"
+  source = "https://github.com/fsnotify/fsnotify.git"
 
 [prune]
   go-tests = true
