build: Add bash to circle CI build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,7 @@ jobs:
             fi
             DOCKER_IMAGE_TAG=${CIRCLE_TAG:-latest}
             docker login -u ${DOCKER_LOGIN} -p ${DOCKER_PASSWORD}
+            apk add -U make bash
             make push
 
 workflows:
