--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+# Copyright (c) 2022, Oracle and/or its affiliates.
+# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
+
 out/
 _gopath/
 vendor/
 .vendor
 manifest-tool
+.idea/
