feat: Added automation to create release from tag
Signed-off-by: Steve Hipwell <steve.hipwell@gmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,12 +8,26 @@
 
 version: 2
 updates:
-  - package-ecosystem: "gomod"
-    directory: "/"
+  - package-ecosystem: github-actions
+    directory: /
+    groups:
+      github-actions:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
     schedule:
-      interval: "weekly"
+      interval: weekly
 
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: gomod
+    directory: /
+    groups:
+      gomod:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
     schedule:
-      interval: "weekly"
+      interval: weekly
