Add step to check Docker auth

--- a/.github/workflows/build_tag_and_main_test.yml
+++ b/.github/workflows/build_tag_and_main_test.yml
@@ -29,6 +29,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
+      - name: Verify Docker Auth
+        run: docker info
+
       - name: Build and push image
         run: |
           docker buildx build \
@@ -52,6 +55,9 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
+
+      - name: Verify Docker Auth
+        run: docker info
 
       - name: Build Windows image
         run: |
