--- a/.github/workflows/build_tag_and_main.yml
+++ b/.github/workflows/build_tag_and_main.yml
@@ -60,12 +60,12 @@ jobs:
           docker build `
             --file Dockerfile.windows `
             --platform windows/amd64 `
-            -t ghcr.io/jimmidyson/configmap-reload:${{ github.ref_name == 'main' && 'dev-windows' || github.ref_name }}-windows `
+            -t ghcr.io/jimmidyson/configmap-reload:${{ github.ref_name == 'main' && 'dev' || github.ref_name }}-windows `
             .
 
       - name: Push Windows image
         run: |
-          docker push ghcr.io/jimmidyson/configmap-reload:${{ github.ref_name == 'main' && 'dev-windows' || github.ref_name }}-windows
+          docker push ghcr.io/jimmidyson/configmap-reload:${{ github.ref_name == 'main' && 'dev' || github.ref_name }}-windows
 
   create-release:
     if: startsWith(github.ref, 'refs/tags/')
