--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,25 +1,21 @@
 # escape=`
 # syntax=docker/dockerfile:1
 
-ARG BASEIMAGE=mcr.microsoft.com/windows/nanoserver:ltsc2022
+ARG BASEIMAGE=mcr.microsoft.com/windows/servercore:ltsc2022
 
 FROM golang:1.24.4-windowsservercore-ltsc2022@sha256:5878fadfc7ce48fcc0f38640ef136cfaf26ece43d60d19bf576b17d3f35140e0 AS builder
 
 COPY . C:\src
 WORKDIR C:\src
 SHELL ["powershell", "-Command"]
-RUN go build -o configmap-reload.exe configmap-reload.go
+RUN $env:GOOS="windows"; $env:GOARCH="amd64"; go build -o configmap-reload.exe configmap-reload.go
 
 FROM ${BASEIMAGE}
 
 LABEL org.opencontainers.image.source="https://github.com/jimmidyson/configmap-reload"
 
 WORKDIR C:\configmap-reload
-COPY --from=builder C:\src\configmap-reload.exe C:\configmap-reload\configmap-reload.exe
-
-USER ContainerAdministrator
-
-RUN setx /M PATH "%PATH%;C:\configmap-reload"
+COPY --from=builder C:\src\configmap-reload.exe configmap-reload.exe
 
 USER ContainerUser
 
