--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -2,7 +2,7 @@ name: build-pr
 on:
   pull_request:
     branches:
-      - main
+    - main
 
 permissions: read-all
 
@@ -10,18 +10,18 @@ jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout code
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+    - name: Checkout code
+      uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
 
-      - name: Build image
-        run: |
-          docker buildx build \
-            --platform linux/arm64/v8,linux/amd64,linux/arm,linux/ppc64le,linux/s390x \
-            -t ghcr.io/jimmidyson/configmap-reload:${{ github.event.pull_request.head.sha }} \
-            .
+    - name: Build image
+      run: |
+        docker buildx build \
+          --platform linux/arm64/v8,linux/amd64,linux/arm,linux/ppc64le,linux/s390x \
+          -t ghcr.io/${{ github.repository_owner }}/configmap-reload:${{ github.event.pull_request.head.sha }} \
+          .
